deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jimu-server
  namespace: jimu
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: management
      port: 9090
      targetPort: 9090
      protocol: TCP
  selector:
    app: jimu-server
---
apiVersion: v1
kind: Service
metadata:
  name: jimu-management
  namespace: jimu
spec:
  type: ClusterIP
  ports:
    - name: management
      port: 9090
      targetPort: 9090
  selector:
    app: jimu-server
